--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,13 +2,21 @@ name: Publish docs
 on:
   push:
     branches: [main]
-    paths: ["mkdocs.yml", "docs/**"]
+    paths:
+      - mkdocs.yml
+      - docs/**
+
+permissions:
+  contents: write   # needed for pushing to gh-pages
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
+        with:
+          python-version: "3.11"
       - run: python -m pip install mkdocs mkdocs-material
-      - run: python -m mkdocs gh-deploy --force
+      - name: Build & deploy to gh-pages
+        run: python -m mkdocs gh-deploy --force --no-history
