--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,9 @@ site_name: tamil-utils
 repo_url: https://github.com/arulnidhii/tamil-utils
 theme:
   name: material
+
 nav:
   - Home: index.md
   - Usage: usage.md
   - API: api.md
+  - Recipes: recipes.md
