--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tamil-utils"
-version = "0.2.0"
+version = "0.3.0a1"
 description = "Tiny Tamil text utilities: normalize, tokenize, stopword removal, graphemes"
 readme = "README.md"
 requires-python = ">=3.9"
